--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: country_picker
-description: A new Flutter project.
-version: 0.0.1
-author:
-homepage:
+description: Country Code Picker
+version: 0.0.2
+author: 
+homepage: https://github.com/equbapp/country_picker.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
